# trying_diesel_rs

./: .env  Cargo.toml  first_database.sqlite3
migrations/2023-08-10-233128_create_todos/: up.sql
src/: lib.rs  models.rs  schema.rs
